# lab-more-project-setup-Public

./: README.md  chat.py  gradio_server.py  pyproject.toml
.github/workflows/: flake8.yml
tests/: test_chat_branches.py  test_chat_coverage.py  test_compact_and_provider.py  test_debug_integration.py
tools/: compact.py
