[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci005-alejandro"
version = "0.2.2"
description = "Pirate chat REPL"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Alejandro", email = "abedoya28@students.claremontmckenna.edu" }]
requires-python = ">=3.8"
dependencies = [
    "groq",
    "python-dotenv",
    "openai"
]

[tool.setuptools]
py-modules = ["chat"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools", "tools.*"]

[project.scripts]
chat = "chat:repl"